[gd_scene load_steps=7 format=3 uid="uid://bjgnj03ujp5bk"]

[ext_resource type="Script" uid="uid://dw5pak16lqneb" path="res://scenes/Boat.gd" id="1_4wn8c"]
[ext_resource type="Texture2D" uid="uid://yrgthl8simfd" path="res://sprites/boat.png" id="2_pwn0m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dy3d8"]
size = Vector2(192, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lojk8"]
size = Vector2(64, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ew02"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_np22b"]
size = Vector2(126, 20)

[node name="Boat" type="AnimatableBody2D"]
script = ExtResource("1_4wn8c")

[node name="Boat" type="Sprite2D" parent="."]
texture = ExtResource("2_pwn0m")

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 32)
shape = SubResource("RectangleShape2D_dy3d8")

[node name="collider2" type="CollisionShape2D" parent="."]
position = Vector2(96, 0)
shape = SubResource("RectangleShape2D_lojk8")

[node name="collider3" type="CollisionShape2D" parent="."]
position = Vector2(-96, 0)
shape = SubResource("RectangleShape2D_lojk8")

[node name="collider4" type="CollisionShape2D" parent="."]
position = Vector2(-112, -32)
shape = SubResource("RectangleShape2D_2ew02")

[node name="Timer2" type="Timer" parent="."]
autostart = true

[node name="Timer" type="Timer" parent="."]

[node name="Detector" type="Area2D" parent="."]

[node name="collider" type="CollisionShape2D" parent="Detector"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_np22b")

[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
